# elephc

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/traffic/: clones.json
.github/workflows/: ci.yml  release.yml
crates/elephc-pdo/: Cargo.toml
crates/elephc-pdo/src/: lib.rs  pg.rs
crates/elephc-phar/: Cargo.toml
crates/elephc-sqlite/: Cargo.toml
crates/elephc-sqlite/src/: lib.rs
crates/elephc-web/: Cargo.toml
docs/: README.md
docs/beyond-php/: extern.md  web.md
docs/compiling/: cli-reference.md  compilation-pipeline.md  optimization.md
docs/internals/: architecture.md  how-elephc-works.md  memory-model.md  the-codegen.md  the-ir.md  the-lexer.md  the-optimizer.md  the-parser.md  the-runtime.md  the-type-checker.md  what-is-a-compiler.md
docs/php/: arrays.md  classes.md  control-structures.md  fibers.md  functions.md  generators.md  math.md  namespaces.md  operators.md  pdo.md  spl.md  streams.md  strings.md  system-and-io.md  types.md
examples/array-access-exception-order/: main.php
examples/assoc-arrays/: main.php
examples/callbacks/: main.php
examples/fibers/: main.php
examples/file-io/: main.php
examples/file-stat/: main.php
examples/http-stream/: main.php
examples/iterators/: main.php
examples/json-basic/: main.php
examples/json-exception/: main.php
examples/logical/: main.php
examples/nullsafe-operator/: main.php
examples/pdo/: main.php
examples/phar-reader/: main.php
examples/phar-write/: main.php
examples/spl-decorators/: main.php
examples/string-ops/: main.php
scripts/: test-linux-arm64.sh  test-linux-x86_64.sh
src/: cli.rs  intrinsics.rs  lib.rs  linker.rs  magic_constants.rs  main.rs  names.rs  pdo_prelude.rs  pipeline.rs  resolver.rs  runtime_cache.rs  source_map.rs  span.rs  superglobals.rs  termination.rs  timings.rs  web_prelude.rs
src/autoload/: walk.rs  (+1 more)
tests/: error_tests.rs  ir_backend_smoke_test.rs  parser_tests.rs  web_tests.rs
(+925 files in other folders)
