[package]
name = "elephc-pdo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Multi-driver database bridge staticlib (SQLite + PostgreSQL) for the elephc PHP-to-native compiler's PDO support"

# Built as both a C-callable staticlib (linked into compiled PHP programs that
# use PDO) and an rlib (so the bridge can be unit-tested from Rust via
# `cargo test -p elephc-pdo`). Mirrors crates/elephc-tls.
[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# `bundled` compiles the SQLite amalgamation into the staticlib, so compiled
# PHP binaries stay standalone (no system -lsqlite3 runtime dependency). Cost:
# a C compile of sqlite at crate build time (cc is already required to build
# elephc's runtime objects).
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
# The synchronous, pure-Rust PostgreSQL client (no system libpq), so compiled
# PHP binaries stay standalone. Connects to a running PostgreSQL server over
# TCP/Unix sockets when a `pgsql:` DSN is opened.
postgres = "0.19"
